2025-08-31 [1.42 Bld 293]

- Addition    : Display values unknown in first pass as
                question marks for 6809 and 68HC12.
- Change      : Improve usage bookeeping of symbols in case of
                forward references.

2025-08-09 [1.42 Bld 292]

- Addition    : Add function SYMUSED(), which has similar
                meaning as IF(N)USED.
- Bugfix      : Correct MMU mapping for data accesses on Z180.
- Change      : Remove address alignment checking for WORD on i960.
- Addition    : Allow FORWARD declarations also outside of sections.

2025-07-16 [1.42 Bld 291]

- Addition    : Display values unknown in first pass as
                question marks for MCS-96 and 6800/6805/68HC08/68HC11.
- Bugfix      : Better differentiation of errors in command line
                options and parameters
- Addition    : Add HCF instruction for MC6800/6801/6809
- Addition    : Add HALT instruction for SC61860
- Addition    : Add Z280 as target

2025-06-20 [1.42 Bld 290]

- Bugfix      : Enable glob() wildcard expansion for Win32
- Addition    : Add built-in function FSIZE() to determine
                the size of a file.

2025-06-10 [1.42 Bld 289]

- Bugfix      : 68040: Add missing instructions FSNEG and FDNEG
- Bugfix      : 68040: Add NC mode for cache operations
- Bugfix      : TMS320C5x: Re-Allow multiple conditions for RETC and XC

2025-05-25 [1.42 Bld 288]

- Bugfix      : 68K: correct encoding of DIVS.L/DIVU.L
                with 32-bit dest operand
- Bugfix      : 68K: regard possible zero-length base
                displacement for PC-relative addressing.
- Bugfix      : 68K: preindexing must be used for indirect
                addressing if index register is suppressed.
- Addition    : Display values unknown in first pass as
                question marks for 8048, 8051, TMDS370, AVR,
                and 8086/V20...V55.

2025-05-21 [1.42 Bld 287]

- Bugfix      : Z380: correct encoding of 'add hl,(abs)'