@@ -106,7 +106,7 @@ static Boolean OneComplOp(TempResult *pErg, TempResult *pLVal, TempResult *pRVal
     return False;
 
   as_tempres_set_int(pErg, ~(pRVal->Contents.Int));
-  PromoteLValFlags();
+  PromoteRValFlags();
   return True;
 }
 
@@ -438,7 +438,7 @@ static Boolean LogNotOp(TempResult *pErg, TempResult *pLVal, TempResult *pRVal)
     return False;
 
   as_tempres_set_int(pErg, pRVal->Contents.Int ? 0 : 1);
-  PromoteLValFlags();
+  PromoteRValFlags();
   return True;
 }
 
